Bug 1963293 - Fix link color in calendar event description in dark mode. r=arschmitz,laurel
Differential Revision: https://phabricator.services.mozilla.com/D247060

--HG--
extra : moz-landing-system : lando

--- a/calendar/base/themes/common/dialogs/calendar-event-dialog.css
+++ b/calendar/base/themes/common/dialogs/calendar-event-dialog.css
@@ -660,6 +660,7 @@ label.label {
 #calendar-event-summary-dialog .item-description a,
 #calendar-task-summary-dialog .item-description a {
   color: LinkText;
+  color-scheme: light dark;
 }
 
 :root[lwt-tree-brighttext] #calendar-summary-dialog .item-description a,
